comment part added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="box">
             <div class="box1">
-                <p class="title">The Phoneix</p>
+                <p class="title">The Phoenix</p>
                 <p class="sub-title">Best Way For Mobile Developers<br>
                     To Present Beautiful Mobile App</p>
                 <button class="cta">Mobile App</button>
@@ -452,7 +452,7 @@
 
 
     <footer>
-        <p class="title-footer">Phoneix</p>
+        <p class="title-footer">Phoenix</p>
         <div class="container">
             <div class="row">
                 <div class="col1 col-lg-4">
@@ -463,7 +463,7 @@
                 <div class="col1 col-lg-4">
                     <i class="las la-envelope"></i>
                     <p>mail</p>
-                    <p>ThePhoneix@yahoo.com</p>
+                    <p>ThePhoenix@yahoo.com</p>
                 </div>
                 <div class="col1 col-lg-4">
                     <i class="las la-map-marker"></i>
