--- a/single.html
+++ b/single.html
@@ -14,7 +14,8 @@
         <link rel="stylesheet" href="lib/owl/owl.carousel.min.css">
         <link rel="stylesheet" href="lib/owl/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet"
+        <link rel="stylesheet" href="css/mynewstyle.css">
+		<link rel="stylesheet"
             href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
     <html>
@@ -296,8 +297,58 @@
         </div>
     </div>
 
+  <div class="gtco-testimonials">
+    <h2>Comments</h2>
+    <div class="owl-carousel owl-carousel1 owl-theme">
+      <div>
+        <div class="card text-center">
+          <div class="card-body">
+            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
+			<br>
+				<hr class="style1">
+			<br>
+			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
+		  </div>
+        </div>
+      </div>
+      <div>
+        <div class="card text-center">
+          <div class="card-body">
+            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
+			<br>
+				<hr class="style1">
+			<br>
+			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card text-center">
+          <div class="card-body">
+            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
+			<br>
+				<hr class="style1">
+			<br>
+			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card text-center">
+          <div class="card-body">
+            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
+			<br>
+				<hr class="style1">
+			<br>
+			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <footer>
-        <p class="title-footer">Phoneix</p>
+        <p class="title-footer">Phoenix</p>
         <div class="container">
             <div class="row">
                 <div class="col1 col-lg-4">
@@ -308,7 +359,7 @@
                 <div class="col1 col-lg-4">
                     <i class="las la-envelope"></i>
                     <p>mail</p>
-                    <p>ThePhoneix@yahoo.com</p>
+                    <p>ThePhoenix@yahoo.com</p>
                 </div>
                 <div class="col1 col-lg-4">
                     <i class="las la-map-marker"></i>
@@ -333,5 +384,6 @@
     <script src="js/main.js"></script>
     <script src="lib/owl/owl.carousel.min.js"></script>
     <script src="js/Site.js"></script>
+	 <script src="js/myjs.js"></script>
 
 </body>
