singlr page change

--- a/single.html
+++ b/single.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="lib/owl/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/mynewstyle.css">
-		<link rel="stylesheet"
+        <link rel="stylesheet"
             href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
     <html>
@@ -68,7 +68,7 @@
     </div>
     <section class="main container">
         <div class="left">
-            <img src="image/art.jpg" alt="" >
+            <img src="image/art.jpg" alt="">
         </div>
         <div class="right">
             <p id="app" class="title">Photo Editor & Candy Camera & Grid & ScrapBook</p>
@@ -114,8 +114,8 @@
             </div>
             <div class="card1">
                 <img src="image/005-chat.png">
-                <p id ="reviews" class="question"></p>
-                <p  class="answer">Review</p>
+                <p id="reviews" class="question"></p>
+                <p class="answer">Review</p>
             </div>
             <div class="card1">
                 <img src="image/refresh.png">
@@ -127,7 +127,7 @@
                 <p id="genres" class="question"></p>
                 <p class="answer">genres</p>
             </div>
-            
+
         </div>
     </div>
 
@@ -296,109 +296,130 @@
             </div>
         </div>
     </div>
-<<<<<<< HEAD
+
     <div class="gtco-testimonials">
         <h2>Comments</h2>
         <div class="owl-carousel owl-carousel1 owl-theme">
-          <div>
-            <div class="card text-center">
-              <div class="card-body">
-                <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-                <br>
-                    <hr class="style1">
-                <br>
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card text-center">
-              <div class="card-body">
-                <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-                <br>
-                    <hr class="style1">
-                <br>
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card text-center">
-              <div class="card-body">
-                <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-                <br>
-                    <hr class="style1">
-                <br>
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card text-center">
-              <div class="card-body">
-                <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-                <br>
-                    <hr class="style1">
-                <br>
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-=======
+            <div>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best
+                            Foods" helps lot, also "Best Before (Shelf Life)"</p>
+                        <br>
+                        <hr class="style1">
+                        <br>
+                        <div class="box-12">
+                            <div class="left-img">
+                                <img class="card-img-top"
+                                    src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301"
+                                    alt="">
+                            </div>
+                            <div class="right-matn">
+                                <div class="up-2">
+                                    <p class="Sentiment">Sentiment</p>
+                                    <p class="vlaue-sent">positive</p>
+                                </div>
+                                <div class="down-2">
+                                    <p class="polarity">Sentiment_Polarity</p>
+                                    <p class="vlaue-polarity">1</p>
+                                </div>
+                            </div>
+                        </div>
 
-  <div class="gtco-testimonials">
-    <h2>Comments</h2>
-    <div class="owl-carousel owl-carousel1 owl-theme">
-      <div>
-        <div class="card text-center">
-          <div class="card-body">
-            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-			<br>
-				<hr class="style1">
-			<br>
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-		  </div>
+
+
+
+
+                    </div>
+
+                </div>
+            </div>
+            <div>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best
+                            Foods" helps lot, also "Best Before (Shelf Life)"</p>
+                        <br>
+                        <hr class="style1">
+                        <br>
+                        <div class="box-12">
+                            <div class="left-img">
+                                <img class="card-img-top"
+                                    src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301"
+                                    alt="">
+                            </div>
+                            <div class="right-matn">
+                                <div class="up-2">
+                                    <p class="Sentiment">Sentiment</p>
+                                    <p class="vlaue-sent">positive</p>
+                                </div>
+                                <div class="down-2">
+                                    <p class="polarity">Sentiment_Polarity</p>
+                                    <p class="vlaue-polarity">1</p>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                </div>
+            </div>
+            <div>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best
+                            Foods" helps lot, also "Best Before (Shelf Life)"</p>
+                        <br>
+                        <hr class="style1">
+                        <br>
+                        <div class="box-12">
+                            <div class="left-img">
+                                <img class="card-img-top"
+                                    src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301"
+                                    alt="">
+                            </div>
+                            <div class="right-matn">
+                                <div class="up-2">
+                                    <p class="Sentiment">Sentiment</p>
+                                    <p class="vlaue-sent">positive</p>
+                                </div>
+                                <div class="down-2">
+                                    <p class="polarity">Sentiment_Polarity</p>
+                                    <p class="vlaue-polarity">1</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best
+                            Foods" helps lot, also "Best Before (Shelf Life)"</p>
+                        <br>
+                        <hr class="style1">
+                        <br>
+                        <div class="box-12">
+                            <div class="left-img">
+                                <img class="card-img-top"
+                                    src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301"
+                                    alt="">
+                            </div>
+                            <div class="right-matn">
+                                <div class="up-2">
+                                    <p class="Sentiment">Sentiment</p>
+                                    <p class="vlaue-sent">positive</p>
+                                </div>
+                                <div class="down-2">
+                                    <p class="polarity">Sentiment_Polarity</p>
+                                    <p class="vlaue-polarity">1</p>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div>
-        <div class="card text-center">
-          <div class="card-body">
-            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-			<br>
-				<hr class="style1">
-			<br>
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="card text-center">
-          <div class="card-body">
-            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-			<br>
-				<hr class="style1">
-			<br>
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="card text-center">
-          <div class="card-body">
-            <p class="card-text">I like eat delicious food. That's I'm cooking food myself, case "10 Best Foods" helps lot, also "Best Before (Shelf Life)"</p>
-			<br>
-				<hr class="style1">
-			<br>
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301" alt="">
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 
->>>>>>> 7b65620350a92a08229f3063752f8f5845e324cb
     <footer>
         <p class="title-footer">Phoenix</p>
         <div class="container">
