--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="product owl-carousel ">
                 <div class="card-1">
                     <div class="up">
-                        <p class="app-name">Learn To Draw ... </p>
+                        <p class="app-name" id="app1"> </p>
                     </div>
                     <div class="down">
                         <div class="left">
@@ -524,6 +524,7 @@
     <script src="js/Site.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/main2.js"></script>
+    <script src="js/main3.js"></script>
 
 
 
