--- a/single.html
+++ b/single.html
@@ -303,7 +303,7 @@
 
     </div>
 </div>
--->
+
 
 
 <div class="gtco-testimonials">
@@ -311,7 +311,7 @@
     <div id="comment" class="owl-carousel owl-carousel1 owl-theme bg-dark">
 
 
-<!--
+
         <div class="card text-center">
 
             <div class="card-body">
@@ -343,7 +343,6 @@
             </div>
 
         </div>
--->
 
 
     </div>
@@ -351,7 +350,48 @@
 
 </div>
 
+-->
 
+
+<div class="comment container">
+    <p class="title-c2">Comments </p>
+
+    <div class="box-comment box--1">
+        <img class="user" src="image/764 [Converted].jpg">
+        <div class="left-comment">
+            <div class="name-date">
+                <p class="name">Jeniffer</p>
+                <p class="date2">1/2/2021</p>
+            </div>
+            <p class="comment-1">
+                Lipsum generator: Lorem Ipsum - All the facts
+                www.lipsum.com
+                Reference site about Lorem Ipsum, giving information on its origins, as well as a random Lipsum
+                generator.
+                You've visited this page 5 times. Last visit: 12/20/20
+            </p>
+        </div>
+    </div>
+
+    
+        <div class="box-comment box--1">
+            <img class="user" src="image/764 [Converted].jpg">                <div class="left-comment">
+                <div class="name-date">
+                    <p class="name">Jeniffer</p>
+                    <p class="date2">1/2/2021</p>
+                </div>
+                <p class="comment-1">
+                    Lipsum generator: Lorem Ipsum - All the facts
+                    www.lipsum.com
+                    Reference site about Lorem Ipsum, giving information on its origins, as well as a random Lipsum
+                    generator.
+                    You've visited this page 5 times. Last visit: 12/20/20
+                </p>
+            </div>
+
+        </div>
+   
+</div>
 
 <footer>
     <p class="title-footer">Phoenix</p>
