scriil bardashte shud

--- a/single.html
+++ b/single.html
@@ -127,173 +127,133 @@
     </div>
 </div>
 
+
 <div class="container title-but">
-    <p class="title-c2">Similar Apps </p>
+    <p class="title-c2">Similar Apps</p>
     <button class="but">See More
         <i class="las la-angle-double-right"></i>
     </button>
 </div>
 
-<div class="container box2">
-    <div class="wrapper">
-        <div class="product owl-carousel ">
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">
-                        <a href="">
-                            Learn To Draw ..
-                        </a>
-                    </p>
+<div class="container main--box">
+    <div class="card-1">
+        <div class="up">
+            <p class="app-name">
+                <a href="">
+                    Learn To Draw ..
+                </a>
+            </p>
+        </div>
+        <div class="down">
+            <div class="left">
+                <div class="up-1">
+                    <p class="downloads-c">10,000+</p>
                 </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
+                <div class="down-1">
+                    <p class="downloads">Downloads</p>
                 </div>
             </div>
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">Learn To Draw ... </p>
+            <div class="right">
+                <div class="up-1 row">
+                    <i class="las la-star"></i>
+                    <p class="downloads-c">4.4</p>
                 </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">Learn To Draw ... </p>
-                </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">Learn To Draw ... </p>
-                </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">Learn To Draw ... </p>
-                </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
+                <div class="down-1">
+                    <p class="downloads">Reviews</p>
                 </div>
             </div>
 
-            <div class="card-1">
-                <div class="up">
-                    <p class="app-name">Learn To Draw ... </p>
-                </div>
-                <div class="down">
-                    <div class="left">
-                        <div class="up-1">
-                            <p class="downloads-c">10,000+</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Downloads</p>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="up-1 row">
-                            <i class="las la-star"></i>
-                            <p class="downloads-c">4.4</p>
-                        </div>
-                        <div class="down-1">
-                            <p class="downloads">Reviews</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
         </div>
     </div>
+    
+    <div class="card-1">
+        <div class="up">
+            <p class="app-name">
+                <a href="">
+                    Learn To Draw ..
+                </a>
+            </p>
+        </div>
+        <div class="down">
+            <div class="left">
+                <div class="up-1">
+                    <p class="downloads-c">10,000+</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Downloads</p>
+                </div>
+            </div>
+            <div class="right">
+                <div class="up-1 row">
+                    <i class="las la-star"></i>
+                    <p class="downloads-c">4.4</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Reviews</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="card-1">
+        <div class="up">
+            <p class="app-name">
+                <a href="">
+                    Learn To Draw ..
+                </a>
+            </p>
+        </div>
+        <div class="down">
+            <div class="left">
+                <div class="up-1">
+                    <p class="downloads-c">10,000+</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Downloads</p>
+                </div>
+            </div>
+            <div class="right">
+                <div class="up-1 row">
+                    <i class="las la-star"></i>
+                    <p class="downloads-c">4.4</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Reviews</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="card-1">
+        <div class="up">
+            <p class="app-name">
+                <a href="">
+                    Learn To Draw ..
+                </a>
+            </p>
+        </div>
+        <div class="down">
+            <div class="left">
+                <div class="up-1">
+                    <p class="downloads-c">10,000+</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Downloads</p>
+                </div>
+            </div>
+            <div class="right">
+                <div class="up-1 row">
+                    <i class="las la-star"></i>
+                    <p class="downloads-c">4.4</p>
+                </div>
+                <div class="down-1">
+                    <p class="downloads">Reviews</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
 </div>
 
 
