--- a/single.html
+++ b/single.html
@@ -316,7 +316,7 @@
 <div class="comment container">
     <p class="title-c2">Comments </p>
 
-    <div class="box-comment box--1">
+    <div class="box-comment box--1 positive">
         <img class="user" src="image/764 [Converted].jpg">
         <div class="left-comment">
             <div class="name-date">
@@ -334,7 +334,7 @@
     </div>
 
     
-        <div class="box-comment box--1">
+        <div class="box-comment box--1 neutral">
             <img class="user" src="image/764 [Converted].jpg">                <div class="left-comment">
                 <div class="name-date">
                     <p class="name">Jeniffer</p>
