--- a/index.html
+++ b/index.html
@@ -82,41 +82,40 @@
 
     </div>
 </div>
-<div class="container">
+ <div class="container">
 
-    <div class="wrapper">
+        <div class="wrapper">
+            <p class="title-c"> Categories</p>
+            <div class="product-category owl-carousel marg">
+                <div class="card">
+                    <img src="image/artist.png">
+                    <p class="category1"> Art & Design </p>
+                </div>
+                <div class="card card-2">
+                    <img src="image/reading-book.png">
+                    <p class="category1"> Books </p>
+                </div>
+                <div class="card">
+                    <img src="image/makeup.png">
+                    <p class="category1"> Beauty </p>
+                </div>
+                <div class="card">
+                    <img src="image/gamepad.png">
+                    <p class="category1"> Game</p>
+                </div>
+                <div class="card">
+                    <img src="image/family(1).png">
+                    <p class="category1"> Family </p>
+                </div>
 
-        <p class="title-c"> Categories</p>
-        <div class="product-category owl-carousel marg">
-            <div class="card">
-                <img src="image/artist.png">
-                <p class="category1"> Art & Design </p>
-            </div>
-            <div class="card card-2">
-                <img src="image/reading-book.png">
-                <p class="category1"> Books </p>
-            </div>
-            <div class="card">
-                <img src="image/makeup.png">
-                <p class="category1"> Beauty </p>
-            </div>
-            <div class="card">
-                <img src="image/gamepad.png">
-                <p class="category1"> Game</p>
-            </div>
-            <div class="card">
-                <img src="image/family(1).png">
-                <p class="category1"> Family </p>
-            </div>
+                <div class="card ">
+                    <img src="image/heartbeat.png">
+                    <p class="category1"> Health </p>
 
-            <div class="card ">
-                <img src="image/heartbeat.png">
-                <p class="category1"> Health </p>
-
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 <div class="container py-5">
     <div class="row">
@@ -192,6 +191,7 @@
 <script src="js/main.js"></script>
 <script src="lib/owl/owl.carousel.min.js"></script>
 <script src="js/chart.js"></script>
+<script src="js/site.js"></script>
 
 
 </body>
