--- a/more.html
+++ b/more.html
@@ -69,7 +69,7 @@
     <h2>Most Downloaded</h2>
     <div class="searchbar-1">
         <div class="left">
-            <img class="search-icon" src="/image/search-interface-symbol.png">
+            <img class="search-icon" src="image/search-interface-symbol.png">
             <input placeholder="search">
             </input>
 
@@ -406,7 +406,7 @@
             <a href="#">&raquo;</a>
         </div>
     </div>
-
+</section>
     <footer>
         <p class="title-footer">Phoneix</p>
         <div class="container">
